[gd_scene load_steps=3 format=3 uid="uid://c1nwosufk3dr1"]

[ext_resource type="Script" path="res://src/scripts/ui/OptionsMenuUI.gd" id="1"]
[ext_resource type="Theme" path="res://src/ui/themes/MenuTheme.tres" id="2"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("2")
script = ExtResource("1")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0

[node name="TitleContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TitleLabel" type="Label" parent="MainContainer/TitleContainer"]
layout_mode = 2
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="OptionsContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LanguageContainer" type="HBoxContainer" parent="MainContainer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LanguageLabel" type="Label" parent="MainContainer/OptionsContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Language:"
vertical_alignment = 1

[node name="LanguageOption" type="OptionButton" parent="MainContainer/OptionsContainer/LanguageContainer"]
layout_mode = 2
size_flags_horizontal = 3
flat = true

[node name="Spacer2" type="Control" parent="MainContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)

[node name="ButtonContainer" type="VBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BackButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "BACK"
flat = true

